--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="banner">
 	<h1>CHANGE your life, learn to CODE</h1>
 	<p>Le Wagon brings technical skills to creative people</p>
-	<a herf="http://www.lewagon.com/" class="button-blue">APPLY NOW!</a>
+	<a href="https://www.lewagon.com/" class="button-blue">APPLY NOW!</a>
 </div> 
 
 
